# LeadBolidTT

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env-example  main.py  pyproject.toml  settings.py
agent/: agent_role.md  main_agent.py  summarizer.py
agent/roles/: crypto_group_prompt.md  financial_group_prompt.md  summarizer.md
db/: db_data.py  db_models.py  db_services.py  db_setup.py  mongodb_client_creator.py  repository.py
logger/: logger.py
redis_app/: redis_repository.py
routers/bot_routers/: router.py  services.py
routers/group_router/: depends.py  router.py  services.py
scheduler/: scheduler_data_to_send.py  scheduler_services.py  scheduler_setup.py  scheduler_tasks.py
tg_bot/: depends.py  tg_clients_data.py  tg_handlers.py  tg_services.py
