[tool.poetry]
name = "leadbolidtt"
version = "0.1.0"
description = ""
authors = ["shkrobik2017 <shkrobik2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
langchain = "^0.3.13"
langchain-ollama = "^0.2.2"
langchain-openai = "^0.2.13"
pydantic-settings = "^2.7.0"
beanie = "^1.28.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
